--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,36 +18,47 @@ jobs:
 
       - name: Install dependencies
         run: |
-          # Add your script installations or dependencies here
+          echo "(Build) Installations or dependencies here"
 
       - name: Run tests
         run: |
-          # Add your test commands here
+          echo "Test commands here"
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
-
+    needs: build
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Check if tag exists
+        id: check_tag
+        run: |
+          if [ -n "$GITHUB_REF" ]; then
+            TAG=${GITHUB_REF#refs/tags/}
+            # echo "::set-output name=tag::$TAG"
+            echo "TAG=${TAG}" >> $GITHUB_ENV
+          else
+            # echo "::set-output name=tag::"
+            echo "TAG=" >> $GITHUB_ENV
+          fi
+        shell: bash
+
       - name: Install dependencies
         run: |
-          # Add your script installations or dependencies here
-
-      - name: Deploy to production
-        run: |
-          # Add your deployment script or commands here
+          echo "(Deploy) Installations or dependencies here"
 
       - name: Create GitHub Release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        id: create_release
+        uses: softprops/action-gh-release@v1
+        # uses: actions/create-release@v1
         with:
+          # tag_name: ${{ steps.check_tag.outputs.tag }}
+          tag_name: ${{ env.TAG }}
+          body: |
+            :gem: released new version ${{ env.TAG }}
           draft: false
           prerelease: false
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: Released for tag ${{ github.ref }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
